--- a/src/main/java/com/mycompany/dbms_project/authentication.form
+++ b/src/main/java/com/mycompany/dbms_project/authentication.form
@@ -94,7 +94,7 @@
                           <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="102" max="-2" attributes="0"/>
                           <Component id="username" min="-2" pref="35" max="-2" attributes="0"/>
                       </Group>
                   </Group>
